--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,7 +5,7 @@
          bootstrap="vendor/autoload.php">
     <testsuites>
         <testsuite name="Test suite">
-            <directory>../test/*</directory>
+            <directory>tests/*</directory>
         </testsuite>
     </testsuites>
 </phpunit>
