Started code refactor and tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
   - '5.6'
 install: composer install --no-interaction --no-progress --no-suggest
 script:
-  - ./vendor/bin/phpcs --extensions=php --standard=PSR2 -s src/
-  - ./vendor/bin/phpmd src/ text cleancode,codesize,design,naming,unusedcode
+  - ./vendor/bin/phpcs --extensions=php --standard=phpcs.xml -s src/
+#  - ./vendor/bin/phpmd src/ text cleancode,codesize,design,naming,unusedcode
   - phpunit
 
