--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,4 +8,14 @@
             <directory>tests/*</directory>
         </testsuite>
     </testsuites>
+
+    <filter>
+        <whitelist>
+            <directory>src</directory>
+            <exclude>
+                <directory>vendor</directory>
+                <directory>tests</directory>
+            </exclude>
+        </whitelist>
+    </filter>
 </phpunit>
