--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: php
 php:
   - '5.6'
+  - '7.0'
+  - '7.1'
+  - hhvm
+  - nightly
 install: composer install --no-interaction --no-progress --no-suggest
 script:
   - ./vendor/bin/phpcs --extensions=php --standard=phpcs.xml -s src/
